# openbrain

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALLATION.md  MIGRATION.md  Makefile  README.md  docker-compose.mcp-dev.yml  docker-compose.mcp-servers.yml  docker-compose.monitoring.yml  docker-compose.monitoring.yml.bak.20260404_161949  docker-compose.unified.yml  optimization_report.md  patch.diff  start_unified.sh
unified/: .env.example  Dockerfile  mypy.ini  pyproject.toml  requirements.txt
unified/contracts/: admin_bounds_guardrail_contract.json  admin_endpoint_guardrail_contract.json  audit_semantics_guardrail_contract.json  backend_probe_guardrail_contract.json  capabilities_health_guardrail_contract.json  capabilities_manifest.json  capabilities_metadata.json  capabilities_response_contract.json  capabilities_truthfulness_guardrail_contract.json  compose_guardrails_contract.json  dashboard_memory_semantics_guardrail_contract.json  export_guardrail_contract.json  hidden_test_data_alert_guardrail_contract.json  http_error_adapter_guardrail_contract.json  http_error_contract_guardrail_contract.json  http_error_contracts.json  local_guardrails_runner_contract.json  mcp_http_session_contract.json  mcp_transport_import_scope_contract.json  mcp_transport_mount_contract.json  memory_paths.json  obsidian_disabled_reason_contract.json  obsidian_guardrail_contract.json  pr_readiness_runner_contract.json  release_gate_contract.json  request_contracts.json  runtime_limits.json  shared_http_client_reuse_contract.json  tool_inventory_guardrail_contract.json  tool_signature_guardrail_contract.json
unified/mcp-gateway/: Dockerfile  pyproject.toml  run-mcp.sh
unified/migrations/: env.py
unified/scripts/: README.md  _config.py  check_memory_paths.py  cleanup_frontmatter_content.py  generate_openbrain_obsidian_dashboard.py  obsidian_inbox_cleanup.sh  weekly_maintenance_dry_run.sh
unified/src/: __init__.py  app_factory.py  auth.py  capabilities_manifest.py  capabilities_metadata.py  combined.py  config.py  crud.py  crud_common.py  db.py  embed.py  exceptions.py  http_error_adapter.py  lifespan.py  main.py  mcp_transport.py  mcp_transport_utils.py  memory_paths.py  memory_reads.py  memory_writes.py  middleware.py  models.py  obsidian_cli.py  obsidian_sync.py  repositories.py  request_builders.py  response_normalizers.py  routes_crud.py  routes_ops.py  routes_v1.py  runtime_limits.py  schemas.py  telemetry.py  telemetry_counters.py  telemetry_gauges.py  telemetry_store.py
unified/tests/: conftest.py  test_access_control.py  test_admin_bounds_parity_guardrail.py  test_admin_endpoint_contract_parity_guardrail.py  test_admin_openapi_contract.py  (+145 more)
(+276 files in other folders)
