[project]
name = "openbrain-unified"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3",
    "PyJWT>=2.8",
    "mcp>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
