[project]
name = "openbrain-unified"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0,<25.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pgvector>=0.3,<1.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0,<25.0",
    "python-dotenv>=1.0.0,<2.0",
    "PyJWT>=2.8,<3.0",
    "mcp>=1.9,<2.0",
    "slowapi>=0.1.9,<1.0",
    "redis>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "fastmcp>=2.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that require explicit environment opt-in",
]
