[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbrain-mcp-gateway"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "redis>=5.0",
    "uvicorn>=0.40",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.100",
    "starlette>=0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
