[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbrain-mcp-gateway"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "redis>=5.0",
    "uvicorn>=0.40",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.100",
    "starlette>=0.35",
    # Pinned explicitly to keep CVE-2026-42561 fix in place even if FastAPI's
    # transitive constraint loosens. See roadmap P4 entry on dep pinning.
    "python-multipart>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
